<resources>
    <string name="app_name">Secucapture</string>
    <string name="logo_img">logo img</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="login">LOGIN</string>
    <string name="title_logo">title logo</string>
    <string name="fullname">FullName</string>
    <string name="select_transporter">Select Transporter</string>
    <string name="select">- - SELECT - -</string>
    <string name="phone_no">Phone No.</string>
    <string name="id_no">ID No.</string>
    <string name="id_photo">ID Photo.</string>
    <string name="driver_s_license_no">Driver\'s License No.</string>
    <string name="driver_s_license_photo">Driver\'s License Photo.</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="lesson_5">Lesson 5</string>
    <string name="_username">username</string>
    <string name="_title_logo">title logo</string>
    <string name="title_logo_">title logo</string>
    <string name="truck_no">Truck No.</string>
    <string name="select_transporter_">Select Transporter</string>
    <string name="select_">- - SELECT - -</string>
    <string name="ntsa_inspection_no">NTSA Inspection No.</string>
    <string name="vehicle_insurance_no">Vehicle Insurance No.</string>
    <string name="id_photo_">ID Photo.</string>
    <string name="save_details_">SAVE DETAILS</string>
    <string name="title__logo">title logo</string>
    <string name="kaz123">KAZ123</string>
    <string name="_1_is_truck_in_good_condition">1. Is Truck In Good Condition.?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="_2_is_tyres_in_good_condition">2. Is Tyres In Good Condition.?</string>
    <string name="_3_is_windows_in_good_condition">3. Is Windows In Good Condition.?</string>
    <string name="_4_is_engine_in_good_condition">4. Is Engine In Good Condition.?</string>
    <string name="_5_is_wipers_in_good_condition">5. Is Wipers In Good Condition.?</string>
    <string name="submit_answers">SUBMIT ANSWERS</string>
    <string name="wait">Syncing...\nPlease wait......</string>
</resources>