<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DriverAssessmentActivity"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <!--Header-->
    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:minHeight="60dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/logo_main_white"
            android:contentDescription="@string/_title_logo" />

    </LinearLayout>

    <!--Page details-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_layout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Driver name-->

            <TextView
                android:id="@+id/username"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@color/transparent"
                android:minHeight="60dp"
                android:hint="@string/_username"
                />
            <!-- Lesson 1-->

            <TextView
                android:id="@+id/lesson_1_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:minHeight="60dp"
                android:background="@drawable/lesson_bg"
                android:text="@string/lesson_1"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/red"
                android:gravity="center"
                />

            <!-- Lesson 2-->

            <TextView
                android:id="@+id/lesson_2_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:minHeight="60dp"
                android:background="@drawable/lesson_bg"
                android:text="@string/lesson_2"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/red"
                android:gravity="center"/>

            <!-- Lesson 3-->

            <TextView
                android:id="@+id/lesson_3_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:minHeight="60dp"
                android:background="@drawable/lesson_bg"
                android:text="@string/lesson_3"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/red"
                android:gravity="center"/>

            <!-- Lesson 4-->

            <TextView
                android:id="@+id/lesson_4_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:minHeight="60dp"
                android:background="@drawable/lesson_bg"
                android:text="@string/lesson_4"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/red"
                android:gravity="center"/>

            <!-- Lesson 5-->

            <TextView
                android:id="@+id/lesson_5_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:minHeight="60dp"
                android:background="@drawable/lesson_bg"
                android:text="@string/lesson_5"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@color/red"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>