<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VehicleAssessmentActivity"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <!--Header-->
    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:minHeight="60dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/logo_main_white"
            android:contentDescription="@string/title__logo" />

    </LinearLayout>

    <!--Page details-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_layout"
        android:layout_marginBottom="80dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="11dp"
            android:layout_marginTop="15dp">

            <!--Plate number-->

            <LinearLayout
                android:id="@+id/fullname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/plate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:minHeight="48dp"
                    tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,VisualLintTextFieldSize"
                    android:text="@string/kaz123"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:padding="9dp"
                    />

            </LinearLayout>

            <!--question 1-->

            <!--question 1-->
            <LinearLayout
                android:id="@+id/question_1_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_is_truck_in_good_condition"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:minHeight="48dp"/>

                <RadioGroup
                    android:id="@+id/question_1_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_1_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/question_1_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                </RadioGroup>

            </LinearLayout>


            <!--question 2-->
            <LinearLayout
                android:id="@+id/question_2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_is_tyres_in_good_condition"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:minHeight="48dp"/>

                <RadioGroup
                    android:id="@+id/question_2_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_2_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="YES"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/question_2_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NO"
                        android:textStyle="normal"
                        android:textSize="24sp"
                        android:textColor="@color/black" />

                </RadioGroup>

            </LinearLayout>

            <!--question 3-->
            <LinearLayout
                android:id="@+id/question_3_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_is_windows_in_good_condition"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:minHeight="48dp"/>

                <RadioGroup
                    android:id="@+id/question_3_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_3_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="YES"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/question_3_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NO"
                        android:textStyle="normal"
                        android:textSize="24sp"
                        android:textColor="@color/black" />

                </RadioGroup>

            </LinearLayout>

            <!--question 4-->
            <LinearLayout
                android:id="@+id/question_4_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_is_engine_in_good_condition"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:minHeight="48dp"/>

                <RadioGroup
                    android:id="@+id/question_4_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_4_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="YES"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/question_4_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NO"
                        android:textStyle="normal"
                        android:textSize="24sp"
                        android:textColor="@color/black" />

                </RadioGroup>

            </LinearLayout>

            <!--question 5-->
            <LinearLayout
                android:id="@+id/question_5_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_is_wipers_in_good_condition"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:minHeight="48dp"/>

                <RadioGroup
                    android:id="@+id/question_5_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question_5_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="YES"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/question_5_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NO"
                        android:textStyle="normal"
                        android:textSize="24sp"
                        android:textColor="@color/black" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!--Footer-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/red"
        android:minHeight="60dp">

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/submit_answers"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>